Endpoints usuario empresa
Se agrego la posibilidad de registrarse como empresa, al testear en Swagger se puede ver en Supabase el usuario empresa registrado correctamente.
